--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
  <h1>Bienvenidos al Proyecto de Grupo</h1>
  <p>Esta es una página de ejemplo para el laboratorio de Git.</p>
- <p>Colaborador: [Nombre]</p>
+ <p>Colaborador: Alejandro Barragán</p>
+ <p>Este es un cambio realizado por Alejandro</p>   
 </body>
 </html>
